--- a/oasis-poc/frontend/src/index.css
+++ b/oasis-poc/frontend/src/index.css
@@ -61,6 +61,21 @@ a {
   overflow: hidden;
 }
 
+button.bento-tile {
+  text-align: left;
+  width: 100%;
+  cursor: pointer;
+}
+
+button.bento-tile:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+button.bento-tile:hover:not(:disabled) {
+  border-color: #c7d2fe;
+}
+
 .bento-tile-header {
   display: flex;
   align-items: center;
